crates/assembly/src/tests/snapshots/miden_assembly__tests__simple_programs__basic_block_and_simple_if_false.snap
---
source: crates/assembly/src/tests/simple_programs.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            push(2)
            push(3)
            noop
            noop
            noop
            noop
        end
        if.true
            basic_block mul end
        else
            basic_block add end
        end
    end
end
