crates/assembly/src/tests/snapshots/miden_assembly__tests__simple_programs__empty_if_true_then_branch.snap
---
source: crates/assembly/src/tests/simple_programs.rs
expression: program
---
begin
    join
        basic_block push(2147483648) push(4294967294) mstore drop noop end
        if.true
            basic_block noop end
        else
            basic_block noop end
        end
    end
end
