crates/assembly/src/tests/snapshots/miden_assembly__tests__simple_programs__repeat_dynamic_iteration_count.snap
---
source: crates/assembly/src/tests/simple_programs.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        add
        add
        add
        add
        add
        noop
    end
end
